# python-web-hw05

./: main.css  main.py  pyproject.toml  server.py
