[tool.poetry]
name = "python-web-hw05"
version = "0.1.0"
description = "python-web-hw05"
authors = ["Vadym Koliada"]

[tool.poetry.dependencies]
python = "~3.11"
aiofile = "3.8.8"
aiohttp = "3.8.5"
aiopath = "0.6.11"
aiosignal = "1.3.1"
anyio = "3.7.1"
async-timeout = "4.0.3"
attrs = "23.1.0"
caio = "0.9.13"
charset-normalizer = "3.2.0"
frozenlist = "1.4.0"
idna = "3.4"
multidict = "6.0.4"
names = "0.3.0"
sniffio = "1.3.0"
websockets = "11.0.3"
yarl = "1.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
